--- a/README
+++ b/README
@@ -7,7 +7,7 @@ in the Solr search engine.
 
 ### Plugin installation ###
 
-You can install this plugin the usual way (RTFM), or if you want to work with the trunk :
+You can install this plugin the usual way (RTFM), or if you want to work with the trunk:
 
     $ cd plugins
     $ git clone git://github.com/thibault/tjSolrDoctrineBehaviorPlugin.git
@@ -340,3 +340,4 @@ Here's some ideas for further developpements:
 * Compatibility with the i18n behavior
 * Add geolocation search
 * add a moreLikeThis() function
+* add an option to set the default search field
