--- a/README
+++ b/README
@@ -409,6 +409,11 @@ Here's how you can easily run the plugin test suite :
 
         $ php plugins/tjSolrDoctrineBehaviorPlugin/test/bin/prove.php
 
+## Professional support ##
+
+I'm a freelance developer, working from France. If you want to contact me for professional support,
+use the email you will find in the "information" tab of this plugin. I speak french and english.
+
 ## Thanks ##
 
 I'd wish to thank the following persons for contributing to this plugin :
