add credit to Ashton Honnecke

--- a/README
+++ b/README
@@ -437,6 +437,7 @@ use the email you will find in the "information" tab of this plugin. I speak fre
 
 I'd wish to thank the following persons for contributing to this plugin :
    * Guillaume Roques
+   * Ashton Honnecke
 
 ## TODO ##
 
