pickaboo in readme file

--- a/README
+++ b/README
@@ -441,13 +441,14 @@ Here's how you can easily run the plugin test suite :
 ## Professional support ##
 
 I'm a freelance developer, working from France. If you want to contact me for professional support,
-use the email you will find in the "information" tab of this plugin. I speak french and english.
+use the email you will find in [my profesional page](http://thibault.jouannic.fr). I speak french and english.
 
 ## Thanks ##
 
 I'd wish to thank the following persons for contributing to this plugin :
-   * Guillaume Roques
-   * Ashton Honnecke
+
+* Guillaume Roques
+* Ashton Honnecke
 
 ## TODO ##
 
